# test_dockerbuild

./: Dockerfile  docker-compose.yaml  pyproject.toml  xxx.sh
.github/workflows/: build_image.yml  test_image.yml
src/app1/: models.py  tests.py
src/app1/migrations/: 0001_initial.py
src/app1/tests/: test_model.py
src/poetrydjango/: asgi.py  settings.py  settings_mysql.py  urls.py  wsgi.py
